# daphne

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.txt  Dockerfile  MANIFEST.in  Makefile  README.rst  docker-tests.sh  notes.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
daphne/: __init__.py  __main__.py  access.py  apps.py  checks.py  cli.py  cli.py~  endpoints.py  http2_protocol.py  http_protocol.py  server.py  server.py~  test_application.py  test_utils.py  testing.py  utils.py  ws_protocol.py
daphne/management/commands/: runserver.py
daphne/tests/: __init__.py  asgi.py  factories.py  http_strategies.py  test_endpoints.py  test_h2.py  test_http.py  test_http_request.py  test_http_response.py  test_utils.py  test_ws.py  testcases.py
daphne/twisted/plugins/: fd_endpoint.py
tests/: http_base.py  http_strategies.py  test_checks.py  test_cli.py  test_http_protocol.py  test_http_request.py  test_http_response.py  test_packaging.py  test_testing.py  test_unixsocket.py  test_utils.py  test_websocket.py
twisted/plugins/: fd_endpoint.py
