[metadata]
name = daphne
version = attr: daphne.__version__
url = https://github.com/django/daphne
author = Django Software Foundation
author_email = foundation@djangoproject.com
description = Django ASGI (HTTP/WebSocket) server
long_description = file: README.rst
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.5
package_dir =
    twisted = daphne/twisted
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    twisted[tls] >= 18.7
    autobahn >= 0.18
    asgiref ~= 3.2
setup_requires =
    pytest-runner

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    daphne = daphne.cli:CommandLineInterface.entrypoint

[options.extras_require]
tests =
    hypothesis == 4.23
    pytest ~= 3.10
    pytest-asyncio ~= 0.8

[bdist_wheel]
universal=1

[tool:pytest]
addopts = tests/

[isort]
include_trailing_comma = True
multi_line_output = 3
known_first_party = channels,daphne,asgiref,channels_redis
line_length = 88

[flake8]
exclude = venv/*,tox/*,docs/*,testproject/*,js_client/*,.eggs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 120
