[metadata]
name = daphne
version = attr: daphne.__version__
url = https://github.com/django/daphne
author = Django Software Foundation
author_email = foundation@djangoproject.com
description = Django ASGI (HTTP/WebSocket) server
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP

[options]
package_dir =
    twisted=daphne/twisted
packages = find:
include_package_data = True
install_requires =
    asgiref>=3.5.2,<4
    autobahn>=22.4.2
    twisted[tls]>=22.4
python_requires = >=3.8
setup_requires =
    pytest-runner
zip_safe = False

[options.entry_points]
console_scripts =
    daphne = daphne.cli:CommandLineInterface.entrypoint

[options.extras_require]
tests =
    django
    hypothesis
    pytest
    pytest-asyncio

[flake8]
exclude = venv/*,tox/*,docs/*,testproject/*,js_client/*,.eggs/*
extend-ignore = E123, E128, E266, E402, W503, E731, W601
max-line-length = 120

[isort]
profile = black

[tool:pytest]
testpaths = tests
asyncio_mode = strict
